/*
 * Copyright 2018 The Kubeflow Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import * as React from 'react';
import { ArchivedRuns } from './ArchivedRuns';
import TestUtils from '../TestUtils';
import { PageProps } from './Page';
import { V2beta1RunStorageState } from '../apisv2beta1/run';
import { render, screen, fireEvent } from '@testing-library/react';
import { ButtonKeys } from '../lib/Buttons';
import { Apis } from '../lib/Apis';

describe('ArchivedRuns', () => {
  const updateBannerSpy = jest.fn();
  const updateToolbarSpy = jest.fn();
  const historyPushSpy = jest.fn();
  const deleteRunSpy = jest.spyOn(Apis.runServiceApi, 'deleteRun');
  const updateDialogSpy = jest.fn();
  const updateSnackbarSpy = jest.fn();
  let renderResult: any;

  function generateProps(): PageProps {
    return TestUtils.generatePageProps(
      ArchivedRuns,
      {} as any,
      {} as any,
      historyPushSpy,
      updateBannerSpy,
      updateDialogSpy,
      updateToolbarSpy,
      updateSnackbarSpy,
    );
  }

  beforeEach(() => {
    updateBannerSpy.mockClear();
    updateToolbarSpy.mockClear();
    historyPushSpy.mockClear();
    deleteRunSpy.mockClear();
    updateDialogSpy.mockClear();
    updateSnackbarSpy.mockClear();
  });

  afterEach(() => {
    if (renderResult && renderResult.unmount) {
      renderResult.unmount();
    }
  });

  it('renders archived runs', () => {
    renderResult = TestUtils.renderWithRouter(<ArchivedRuns {...generateProps()} />);
    expect(renderResult.container).toMatchSnapshot();
  });

  it('lists archived runs in namespace', () => {
    renderResult = TestUtils.renderWithRouter(<ArchivedRuns {...generateProps()} namespace='test-ns' />);
    expect(renderResult.container).toBeInTheDocument();
  });

  it('removes error banner on unmount', () => {
    renderResult = TestUtils.renderWithRouter(<ArchivedRuns {...generateProps()} />);
    renderResult.unmount();
    expect(updateBannerSpy).toHaveBeenCalledWith({});
  });

  it('enables restore and delete button when at least one run is selected', () => {
    renderResult = TestUtils.renderWithRouter(<ArchivedRuns {...generateProps()} />);
    TestUtils.flushPromises();
    expect(TestUtils.getToolbarButton(updateToolbarSpy, ButtonKeys.RESTORE).disabled).toBeTruthy();
    expect(
      TestUtils.getToolbarButton(updateToolbarSpy, ButtonKeys.DELETE_RUN).disabled,
    ).toBeTruthy();
    expect(renderResult.container).toMatchSnapshot();
  });

  it('refreshes the run list when refresh button is clicked', async () => {
    renderResult = TestUtils.renderWithRouter(<ArchivedRuns {...generateProps()} />);
    await TestUtils.getToolbarButton(updateToolbarSpy, ButtonKeys.REFRESH).action();
    expect(renderResult.container).toMatchSnapshot();
  });

  it('shows a list of available runs', () => {
    renderResult = TestUtils.renderWithRouter(<ArchivedRuns {...generateProps()} />);
    expect(renderResult.container).toBeInTheDocument();
  });

  it('cancells deletion when Cancel is clicked', async () => {
    renderResult = TestUtils.renderWithRouter(<ArchivedRuns {...generateProps()} />);

    // Click delete button to delete selected ids.
    const deleteBtn = TestUtils.getToolbarButton(updateToolbarSpy, ButtonKeys.DELETE_RUN);
    await deleteBtn.action();

    // Dialog pops up to confirm the deletion.
    expect(updateDialogSpy).toHaveBeenCalledTimes(1);
    expect(updateDialogSpy).toHaveBeenLastCalledWith(
      expect.objectContaining({
        content: 'Do you want to delete the selected runs? This action cannot be undone.',
      }),
    );

    // Cancel deletion.
    const call = updateDialogSpy.mock.calls[0][0];
    const cancelBtn = call.buttons.find((b: any) => b.text === 'Cancel');
    await cancelBtn.onClick();
    expect(deleteRunSpy).not.toHaveBeenCalled();
  });

  it('deletes selected ids when Confirm is clicked', async () => {
    renderResult = TestUtils.renderWithRouter(<ArchivedRuns {...generateProps()} />);

    // Mock the behavior where the deletion of id1 fails, the deletion of id2 and id3 succeed.
    TestUtils.makeErrorResponseOnce(deleteRunSpy, 'woops');
    deleteRunSpy.mockImplementation(() => Promise.resolve({}));

    // Click delete button to delete selected ids.
    const deleteBtn = TestUtils.getToolbarButton(updateToolbarSpy, ButtonKeys.DELETE_RUN);
    await deleteBtn.action();

    // Dialog pops up to confirm the deletion.
    expect(updateDialogSpy).toHaveBeenCalledTimes(1);
    expect(updateDialogSpy).toHaveBeenLastCalledWith(
      expect.objectContaining({
        content: 'Do you want to delete the selected runs? This action cannot be undone.',
      }),
    );

    // Confirm.
    const call = updateDialogSpy.mock.calls[0][0];
    const confirmBtn = call.buttons.find((b: any) => b.text === 'Delete');
    await confirmBtn.onClick();
    await TestUtils.flushPromises();
    expect(renderResult.container).toMatchSnapshot();
  });
});
