// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArchivedRuns deletes selected ids when Confirm is clicked 1`] = `
<div>
  <div
    class="page"
  >
    <div>
      <div
        class="pageOverflowHidden"
      >
        <div>
          <div
            class="MuiFormControl-root-988 filterBox"
            spellcheck="false"
            style="height: 48px; max-width: 100%; width: 100%;"
          >
            <label
              class="MuiFormLabel-root-1003 MuiInputLabel-root-992 noMargin MuiInputLabel-formControl-997 MuiInputLabel-animated-1000 MuiInputLabel-shrink-999 MuiInputLabel-outlined-1002"
              data-shrink="true"
              for="tableFilterBox"
            >
              Filter runs
            </label>
            <div
              class="MuiInputBase-root-1023 MuiOutlinedInput-root-1010 noLeftPadding MuiInputBase-formControl-1024 MuiInputBase-adornedStart-1027 MuiOutlinedInput-adornedStart-1013"
            >
              <fieldset
                aria-hidden="true"
                class="MuiPrivateNotchedOutline-root-1040 MuiOutlinedInput-notchedOutline-1017 filterBorderRadius"
                style="padding-left: 8px;"
              >
                <legend
                  class="MuiPrivateNotchedOutline-legend-1041"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
              <div
                class="MuiInputAdornment-root-1042 MuiInputAdornment-positionEnd-1045"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-1047"
                  focusable="false"
                  role="presentation"
                  style="color: rgb(128, 134, 139); padding-right: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input-1033 MuiOutlinedInput-input-1018 MuiInputBase-inputAdornedStart-1038 MuiOutlinedInput-inputAdornedStart-1021"
                id="tableFilterBox"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="header"
        >
          <div
            class="columnName cell selectionToggle"
          >
            <span
              class="MuiButtonBase-root-1072 MuiIconButton-root-1066 MuiPrivateSwitchBase-root-1062 MuiCheckbox-root-1056 MuiCheckbox-colorPrimary-1060"
            >
              <span
                class="MuiIconButton-label-1071"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-1047"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
                <input
                  class="MuiPrivateSwitchBase-input-1065"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
              </span>
              <span
                class="MuiTouchRipple-root-1112"
              />
            </span>
          </div>
          <div
            class="columnName"
            style="width: 25%;"
            title="Run name"
          >
            <span
              class="MuiButtonBase-root-1072 MuiTableSortLabel-root-1083 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Run name
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047 MuiTableSortLabel-icon-1085 MuiTableSortLabel-iconDirectionDesc-1086"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Status"
          >
            <span
              class="MuiButtonBase-root-1072 MuiTableSortLabel-root-1083 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Status
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047 MuiTableSortLabel-icon-1085 MuiTableSortLabel-iconDirectionDesc-1086"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Duration"
          >
            <span
              class="MuiButtonBase-root-1072 MuiTableSortLabel-root-1083 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Duration
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047 MuiTableSortLabel-icon-1085 MuiTableSortLabel-iconDirectionDesc-1086"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Experiment"
          >
            <span
              class="MuiButtonBase-root-1072 MuiTableSortLabel-root-1083 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Experiment
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047 MuiTableSortLabel-icon-1085 MuiTableSortLabel-iconDirectionDesc-1086"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Pipeline Version"
          >
            <span
              class="MuiButtonBase-root-1072 MuiTableSortLabel-root-1083 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Pipeline Version
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047 MuiTableSortLabel-icon-1085 MuiTableSortLabel-iconDirectionDesc-1086"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Recurring Run"
          >
            <span
              class="MuiButtonBase-root-1072 MuiTableSortLabel-root-1083 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Recurring Run
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047 MuiTableSortLabel-icon-1085 MuiTableSortLabel-iconDirectionDesc-1086"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Start time"
          >
            <span
              class="MuiButtonBase-root-1072 MuiTableSortLabel-root-1083 MuiTableSortLabel-active-1084 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Start time
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047 MuiTableSortLabel-icon-1085 MuiTableSortLabel-iconDirectionDesc-1086"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="scrollContainer"
          style="min-height: 60px;"
        >
          <div
            class="emptyMessage"
          >
            No archived runs found.
          </div>
        </div>
        <div
          class="footer"
        >
          <span
            class=""
          >
            Rows per page:
          </span>
          <div
            class="MuiFormControl-root-988 verticalAlignInitial rowsPerPage"
          >
            <div
              class="MuiInputBase-root-1023 MuiInput-root-1095 MuiInputBase-formControl-1024 MuiInput-formControl-1096"
            >
              <div
                class="MuiSelect-root-1088"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  class="MuiSelect-select-1089 MuiSelect-selectMenu-1092 MuiInputBase-input-1033 MuiInput-input-1103"
                  role="button"
                  tabindex="0"
                >
                  10
                </div>
                <input
                  type="hidden"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-1047 MuiSelect-icon-1094"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root-1072 MuiButtonBase-disabled-1073 MuiIconButton-root-1066 MuiIconButton-disabled-1070"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-1071"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
          <button
            class="MuiButtonBase-root-1072 MuiButtonBase-disabled-1073 MuiIconButton-root-1066 MuiIconButton-disabled-1070"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-1071"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-1047"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArchivedRuns enables restore and delete button when at least one run is selected 1`] = `
<div>
  <div
    class="page"
  >
    <div>
      <div
        class="pageOverflowHidden"
      >
        <div>
          <div
            class="MuiFormControl-root-424 filterBox"
            spellcheck="false"
            style="height: 48px; max-width: 100%; width: 100%;"
          >
            <label
              class="MuiFormLabel-root-439 MuiInputLabel-root-428 noMargin MuiInputLabel-formControl-433 MuiInputLabel-animated-436 MuiInputLabel-shrink-435 MuiInputLabel-outlined-438"
              data-shrink="true"
              for="tableFilterBox"
            >
              Filter runs
            </label>
            <div
              class="MuiInputBase-root-459 MuiOutlinedInput-root-446 noLeftPadding MuiInputBase-formControl-460 MuiInputBase-adornedStart-463 MuiOutlinedInput-adornedStart-449"
            >
              <fieldset
                aria-hidden="true"
                class="MuiPrivateNotchedOutline-root-476 MuiOutlinedInput-notchedOutline-453 filterBorderRadius"
                style="padding-left: 8px;"
              >
                <legend
                  class="MuiPrivateNotchedOutline-legend-477"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
              <div
                class="MuiInputAdornment-root-478 MuiInputAdornment-positionEnd-481"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-483"
                  focusable="false"
                  role="presentation"
                  style="color: rgb(128, 134, 139); padding-right: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input-469 MuiOutlinedInput-input-454 MuiInputBase-inputAdornedStart-474 MuiOutlinedInput-inputAdornedStart-457"
                id="tableFilterBox"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="header"
        >
          <div
            class="columnName cell selectionToggle"
          >
            <span
              class="MuiButtonBase-root-508 MuiIconButton-root-502 MuiPrivateSwitchBase-root-498 MuiCheckbox-root-492 MuiCheckbox-colorPrimary-496"
            >
              <span
                class="MuiIconButton-label-507"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-483"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
                <input
                  class="MuiPrivateSwitchBase-input-501"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
              </span>
              <span
                class="MuiTouchRipple-root-548"
              />
            </span>
          </div>
          <div
            class="columnName"
            style="width: 25%;"
            title="Run name"
          >
            <span
              class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Run name
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Status"
          >
            <span
              class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Status
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Duration"
          >
            <span
              class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Duration
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Experiment"
          >
            <span
              class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Experiment
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Pipeline Version"
          >
            <span
              class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Pipeline Version
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Recurring Run"
          >
            <span
              class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Recurring Run
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Start time"
          >
            <span
              class="MuiButtonBase-root-508 MuiTableSortLabel-root-519 MuiTableSortLabel-active-520 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Start time
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483 MuiTableSortLabel-icon-521 MuiTableSortLabel-iconDirectionDesc-522"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="scrollContainer"
          style="min-height: 60px;"
        >
          <div
            class="busyOverlay"
          />
          <div
            class="MuiCircularProgress-root-555 MuiCircularProgress-colorPrimary-558 MuiCircularProgress-indeterminate-557 absoluteCenter"
            role="progressbar"
            style="width: 25px; height: 25px; z-index: 2;"
          >
            <svg
              class="MuiCircularProgress-svg-560"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle-561 MuiCircularProgress-circleIndeterminate-563"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
        <div
          class="footer"
        >
          <span
            class=""
          >
            Rows per page:
          </span>
          <div
            class="MuiFormControl-root-424 verticalAlignInitial rowsPerPage"
          >
            <div
              class="MuiInputBase-root-459 MuiInput-root-531 MuiInputBase-formControl-460 MuiInput-formControl-532"
            >
              <div
                class="MuiSelect-root-524"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  class="MuiSelect-select-525 MuiSelect-selectMenu-528 MuiInputBase-input-469 MuiInput-input-539"
                  role="button"
                  tabindex="0"
                >
                  10
                </div>
                <input
                  type="hidden"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-483 MuiSelect-icon-530"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root-508 MuiButtonBase-disabled-509 MuiIconButton-root-502 MuiIconButton-disabled-506"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-507"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
          <button
            class="MuiButtonBase-root-508 MuiIconButton-root-502"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-507"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-483"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-548"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArchivedRuns refreshes the run list when refresh button is clicked 1`] = `
<div>
  <div
    class="page"
  >
    <div>
      <div
        class="pageOverflowHidden"
      >
        <div>
          <div
            class="MuiFormControl-root-565 filterBox"
            spellcheck="false"
            style="height: 48px; max-width: 100%; width: 100%;"
          >
            <label
              class="MuiFormLabel-root-580 MuiInputLabel-root-569 noMargin MuiInputLabel-formControl-574 MuiInputLabel-animated-577 MuiInputLabel-shrink-576 MuiInputLabel-outlined-579"
              data-shrink="true"
              for="tableFilterBox"
            >
              Filter runs
            </label>
            <div
              class="MuiInputBase-root-600 MuiOutlinedInput-root-587 noLeftPadding MuiInputBase-formControl-601 MuiInputBase-adornedStart-604 MuiOutlinedInput-adornedStart-590"
            >
              <fieldset
                aria-hidden="true"
                class="MuiPrivateNotchedOutline-root-617 MuiOutlinedInput-notchedOutline-594 filterBorderRadius"
                style="padding-left: 8px;"
              >
                <legend
                  class="MuiPrivateNotchedOutline-legend-618"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
              <div
                class="MuiInputAdornment-root-619 MuiInputAdornment-positionEnd-622"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-624"
                  focusable="false"
                  role="presentation"
                  style="color: rgb(128, 134, 139); padding-right: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input-610 MuiOutlinedInput-input-595 MuiInputBase-inputAdornedStart-615 MuiOutlinedInput-inputAdornedStart-598"
                id="tableFilterBox"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="header"
        >
          <div
            class="columnName cell selectionToggle"
          >
            <span
              class="MuiButtonBase-root-649 MuiIconButton-root-643 MuiPrivateSwitchBase-root-639 MuiCheckbox-root-633 MuiCheckbox-colorPrimary-637"
            >
              <span
                class="MuiIconButton-label-648"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-624"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
                <input
                  class="MuiPrivateSwitchBase-input-642"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
              </span>
              <span
                class="MuiTouchRipple-root-689"
              />
            </span>
          </div>
          <div
            class="columnName"
            style="width: 25%;"
            title="Run name"
          >
            <span
              class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Run name
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Status"
          >
            <span
              class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Status
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Duration"
          >
            <span
              class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Duration
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Experiment"
          >
            <span
              class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Experiment
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Pipeline Version"
          >
            <span
              class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Pipeline Version
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Recurring Run"
          >
            <span
              class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Recurring Run
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Start time"
          >
            <span
              class="MuiButtonBase-root-649 MuiTableSortLabel-root-660 MuiTableSortLabel-active-661 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Start time
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624 MuiTableSortLabel-icon-662 MuiTableSortLabel-iconDirectionDesc-663"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="scrollContainer"
          style="min-height: 60px;"
        >
          <div
            class="emptyMessage"
          >
            No archived runs found.
          </div>
        </div>
        <div
          class="footer"
        >
          <span
            class=""
          >
            Rows per page:
          </span>
          <div
            class="MuiFormControl-root-565 verticalAlignInitial rowsPerPage"
          >
            <div
              class="MuiInputBase-root-600 MuiInput-root-672 MuiInputBase-formControl-601 MuiInput-formControl-673"
            >
              <div
                class="MuiSelect-root-665"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  class="MuiSelect-select-666 MuiSelect-selectMenu-669 MuiInputBase-input-610 MuiInput-input-680"
                  role="button"
                  tabindex="0"
                >
                  10
                </div>
                <input
                  type="hidden"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-624 MuiSelect-icon-671"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root-649 MuiButtonBase-disabled-650 MuiIconButton-root-643 MuiIconButton-disabled-647"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-648"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
          <button
            class="MuiButtonBase-root-649 MuiButtonBase-disabled-650 MuiIconButton-root-643 MuiIconButton-disabled-647"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-648"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-624"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArchivedRuns renders archived runs 1`] = `
<div>
  <div
    class="page"
  >
    <div>
      <div
        class="pageOverflowHidden"
      >
        <div>
          <div
            class="MuiFormControl-root-1 filterBox"
            spellcheck="false"
            style="height: 48px; max-width: 100%; width: 100%;"
          >
            <label
              class="MuiFormLabel-root-16 MuiInputLabel-root-5 noMargin MuiInputLabel-formControl-10 MuiInputLabel-animated-13 MuiInputLabel-shrink-12 MuiInputLabel-outlined-15"
              data-shrink="true"
              for="tableFilterBox"
            >
              Filter runs
            </label>
            <div
              class="MuiInputBase-root-36 MuiOutlinedInput-root-23 noLeftPadding MuiInputBase-formControl-37 MuiInputBase-adornedStart-40 MuiOutlinedInput-adornedStart-26"
            >
              <fieldset
                aria-hidden="true"
                class="MuiPrivateNotchedOutline-root-53 MuiOutlinedInput-notchedOutline-30 filterBorderRadius"
                style="padding-left: 8px;"
              >
                <legend
                  class="MuiPrivateNotchedOutline-legend-54"
                  style="width: 0px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
              <div
                class="MuiInputAdornment-root-55 MuiInputAdornment-positionEnd-58"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-60"
                  focusable="false"
                  role="presentation"
                  style="color: rgb(128, 134, 139); padding-right: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input-46 MuiOutlinedInput-input-31 MuiInputBase-inputAdornedStart-51 MuiOutlinedInput-inputAdornedStart-34"
                id="tableFilterBox"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="header"
        >
          <div
            class="columnName cell selectionToggle"
          >
            <span
              class="MuiButtonBase-root-85 MuiIconButton-root-79 MuiPrivateSwitchBase-root-75 MuiCheckbox-root-69 MuiCheckbox-colorPrimary-73"
            >
              <span
                class="MuiIconButton-label-84"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-60"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
                <input
                  class="MuiPrivateSwitchBase-input-78"
                  data-indeterminate="false"
                  type="checkbox"
                  value=""
                />
              </span>
              <span
                class="MuiTouchRipple-root-125"
              />
            </span>
          </div>
          <div
            class="columnName"
            style="width: 25%;"
            title="Run name"
          >
            <span
              class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Run name
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Status"
          >
            <span
              class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Status
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Duration"
          >
            <span
              class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Duration
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Experiment"
          >
            <span
              class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Experiment
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Pipeline Version"
          >
            <span
              class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Pipeline Version
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 8.333333333333332%;"
            title="Recurring Run"
          >
            <span
              class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 ellipsis"
              role="button"
              tabindex="0"
              title="Cannot sort by this column"
            >
              Recurring Run
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
          <div
            class="columnName"
            style="width: 16.666666666666664%;"
            title="Start time"
          >
            <span
              class="MuiButtonBase-root-85 MuiTableSortLabel-root-96 MuiTableSortLabel-active-97 ellipsis"
              role="button"
              tabindex="0"
              title="Sort"
            >
              Start time
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60 MuiTableSortLabel-icon-98 MuiTableSortLabel-iconDirectionDesc-99"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="scrollContainer"
          style="min-height: 60px;"
        >
          <div
            class="busyOverlay"
          />
          <div
            class="MuiCircularProgress-root-132 MuiCircularProgress-colorPrimary-135 MuiCircularProgress-indeterminate-134 absoluteCenter"
            role="progressbar"
            style="width: 25px; height: 25px; z-index: 2;"
          >
            <svg
              class="MuiCircularProgress-svg-137"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle-138 MuiCircularProgress-circleIndeterminate-140"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
        <div
          class="footer"
        >
          <span
            class=""
          >
            Rows per page:
          </span>
          <div
            class="MuiFormControl-root-1 verticalAlignInitial rowsPerPage"
          >
            <div
              class="MuiInputBase-root-36 MuiInput-root-108 MuiInputBase-formControl-37 MuiInput-formControl-109"
            >
              <div
                class="MuiSelect-root-101"
              >
                <div
                  aria-haspopup="true"
                  aria-pressed="false"
                  class="MuiSelect-select-102 MuiSelect-selectMenu-105 MuiInputBase-input-46 MuiInput-input-116"
                  role="button"
                  tabindex="0"
                >
                  10
                </div>
                <input
                  type="hidden"
                  value="10"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-60 MuiSelect-icon-107"
                  focusable="false"
                  role="presentation"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root-85 MuiButtonBase-disabled-86 MuiIconButton-root-79 MuiIconButton-disabled-83"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiIconButton-label-84"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </button>
          <button
            class="MuiButtonBase-root-85 MuiIconButton-root-79"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-84"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-60"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-125"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
